[package]
name = "aperturec-server"
description = "ApertureC Server"
edition.workspace = true
version.workspace = true

[dependencies]
aperturec-channel = { path = "../channel" }
aperturec-graphics = { path = "../graphics" }
aperturec-protocol = { path = "../protocol" }
aperturec-state-machine = { path = "../state_machine" }
aperturec-metrics = { path = "../metrics" }

anyhow = "1.0"
bytes = "1.4"
clap = { version = "4.3", features = ["derive", "env", "string"] }
ctrlc = "3.4.1"
derive_builder = "0.12"
euclid = "0.22"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
futures = "0.3"
gethostname = "0.4"
jpegxl-rs = { version = "0.10", features = ["vendored"] }
linear-map = "1.2"
paste = "1.0.14"
prometheus = "0.13.3"
prost = "0.12"
md5 = "0.7"
ndarray = "0.16"
parking_lot = { version = "0.12.3", features = ["send_guard", "hardware-lock-elision", "arc_lock"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
rayon = "1.10"
shlex = "1.2"
socket2 = "0.5"
tokio = { version = "1.38", features = ["full", "rt", "tracing"] }
tokio-stream = { version = "0.1", features = ["sync", "fs"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trait-variant = "0.1"
which = "6.0"
xcb = { version = "1.2.2", features = ["damage", "randr", "xtest", "xfixes" ] }

[dev-dependencies]
aperturec-channel = { path = "../channel", features = ["test-tls-material"] }
criterion = "0.4"
prost-types = "0.12"
serial_test = "2.0"
tempdir = "0.3"

[[bench]]
name = "tracking_buffer_bench"
harness = false

[package.metadata.deb]
copyright = "2024, Zetier Inc."
depends = "$auto, xvfb"
maintainer = "ApertureC Team <aperturec@zetier.com>"
section = "x11"
