[package]
name = "aperturec-state-machine"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
aperturec-state-machine-derive = { path = "derive" }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
