[package]
name = "aperturec-trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
const_format = "0.2"
csv = "1.3"
parking_lot = { version = "0.12", features = ["send_guard", "hardware-lock-elision"] }
paste = "1.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "std", "env-filter", "time"] }

[features]
queue = []
