[package]
name = "aperturec-state-machine-derive"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.28", features = ["extra-traits"] }
quote = "1.0.32"

[dev-dependencies]
aperturec-state-machine = { path = "../" }
