[package]
name = "aperturec-state-machine-derive"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.28", features = ["extra-traits"] }
quote = "1.0.32"

[dev-dependencies]
aperturec-state-machine = { path = "../" }
