[package]
name = "cargo-trace-queues"
version = "0.1.0"
edition = "2021"
descrition = "Utility for queue traces"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cargo-files-core = "0.1"
cargo_metadata = "0.15"
clap = { version = "4.3", features = ["derive", "string"] }
csv = "1.3"
hdrhistogram = { version = "7.5" }
plotters = { version = "0.3" }
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
tracing = "0.1"
